force-app/main/default/objects/Case/fields/AbbottAwarenessDate__c.field-meta.xml
<CustomField>
    <fullName>AbbottAwarenessDate__c</fullName>
    <label>Abbott Awareness Date</label>
    <type>Date</type>
</CustomField>