force-app/main/default/objects/Case/fields/AdditionalEscalationPointEmail2__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEscalationPointEmail2__c</fullName>
    <label>Additional Escalation Point Email 2</label>
    <type>Email</type>
</CustomField>