force-app/main/default/objects/Case/fields/AdditionalEscalationPointEmail3__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEscalationPointEmail3__c</fullName>
    <label>Additional Escalation Point Email 3</label>
    <type>Email</type>
</CustomField>