force-app/main/default/objects/Case/fields/AdditionalObservation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalObservation__c</fullName>
    <label>Additional Observation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>