force-app/main/default/objects/Case/fields/AutoAssignCalls__c.field-meta.xml
<CustomField>
    <fullName>AutoAssignCalls__c</fullName>
    <formula>Campaign__r.AutoAssignCalls__c</formula>
    <label>Auto-Assign Calls</label>
    <type>Checkbox</type>
</CustomField>