force-app/main/default/objects/Case/fields/Batch_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Number 1</label>
    <referenceTo>BatchNumber__c</referenceTo>
    <relationshipLabel>Cases (Batch Number 1)</relationshipLabel>
    <relationshipName>Cases_BatchNum1</relationshipName>
    <type>Lookup</type>
</CustomField>