force-app/main/default/objects/Case/fields/Batch_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Number 2</label>
    <referenceTo>BatchNumber__c</referenceTo>
    <relationshipLabel>Cases (Batch Number 2)</relationshipLabel>
    <relationshipName>Cases_BatchNum2</relationshipName>
    <type>Lookup</type>
</CustomField>