force-app/main/default/objects/Case/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <description>Capture batch number for a product</description>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>