force-app/main/default/objects/Case/fields/Call_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Sub-Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Call Sub-Category</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (Call Sub-Category)</relationshipLabel>
    <relationshipName>CallSubCategories</relationshipName>
    <type>Lookup</type>
</CustomField>