force-app/main/default/objects/Case/fields/CallAccepted__c.field-meta.xml
<CustomField>
    <fullName>CallAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Accepted</label>
    <type>Checkbox</type>
</CustomField>