force-app/main/default/objects/Case/fields/CallCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CallCompletedDate__c</fullName>
    <label>Call Completed Date</label>
    <type>DateTime</type>
</CustomField>