force-app/main/default/objects/Case/fields/CallCompletedDateExternal__c.field-meta.xml
<CustomField>
    <fullName>CallCompletedDateExternal__c</fullName>
    <label>Call Completed Date (External)</label>
    <type>DateTime</type>
</CustomField>