force-app/main/default/objects/Case/fields/CallDueDateWarningThreshold__c.field-meta.xml
<CustomField>
    <fullName>CallDueDateWarningThreshold__c</fullName>
    <formula>if ( Market__c = &apos;MY&apos;, 
$CustomMetadata.AffiliateMetadata__mdt.MY.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;PH&apos;, 
$CustomMetadata.AffiliateMetadata__mdt.PH.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;SG&apos;, 
$CustomMetadata.AffiliateMetadata__mdt.SG.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;TH&apos;, 
$CustomMetadata.AffiliateMetadata__mdt.TH.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;VN&apos;, 
    $CustomMetadata.AffiliateMetadata__mdt.VN.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;ANZ&apos;, 
    $CustomMetadata.AffiliateMetadata__mdt.ANZ.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;IN&apos;, 
    $CustomMetadata.AffiliateMetadata__mdt.IN.CallDueDateWarningThreshold__c,
if ( Market__c = &apos;ID&apos;, 
    $CustomMetadata.AffiliateMetadata__mdt.ID.CallDueDateWarningThreshold__c,
    0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Due Date Warning Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>