force-app/main/default/objects/Case/fields/CallRegarding__c.field-meta.xml
<CustomField>
    <fullName>CallRegarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter to show only Contacts within the Case Contact&apos;s Household</description>
    <label>Call Regarding</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.To_be_archived__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Call Regarding)</relationshipLabel>
    <relationshipName>CallRegarding</relationshipName>
    <type>Lookup</type>
</CustomField>