force-app/main/default/objects/Case/fields/CallTransferReason__c.field-meta.xml
<CustomField>
    <fullName>CallTransferReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Transfer Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Call Transfer Reason</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (Call Transfer Reason)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>