force-app/main/default/objects/Case/fields/CampaignStartDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignStartDate__c</fullName>
    <formula>Campaign__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>