force-app/main/default/objects/Case/fields/Care_Giver__c.field-meta.xml
<CustomField>
    <fullName>Care_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SG Only</description>
    <label>Care Giver</label>
    <type>Checkbox</type>
</CustomField>