force-app/main/default/objects/Case/fields/CaregiverName__c.field-meta.xml
<CustomField>
    <fullName>CaregiverName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capture the name of the Caregiver from Contact</description>
    <label>Caregiver Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Adult</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Caregiver Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>