force-app/main/default/objects/Case/fields/Case_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Case_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID - 18</label>
    <type>Text</type>
</CustomField>