force-app/main/default/objects/Case/fields/CaseAccepted__c.field-meta.xml
<CustomField>
    <fullName>CaseAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Accepted</label>
    <type>Checkbox</type>
</CustomField>