force-app/main/default/objects/Case/fields/CaseOwnerReadOnly__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerReadOnly__c</fullName>
    <formula>IF(
LEFT(OwnerId, 3) = &apos;005&apos;,
Owner:User.FirstName  + &apos; &apos; + Owner:User.LastName,
Owner:Queue.QueueName
)</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>