force-app/main/default/objects/Case/fields/CaseRegarding__c.field-meta.xml
<CustomField>
    <fullName>CaseRegarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Regarding</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Case Regarding)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>