force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(Channel__r.Category__c)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>