force-app/main/default/objects/Case/fields/ChannelRecordType__c.field-meta.xml
<CustomField>
    <fullName>ChannelRecordType__c</fullName>
    <formula>Channel__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Record Type</label>
    <type>Text</type>
</CustomField>