force-app/main/default/objects/Case/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <formula>TEXT(Channel__r.Type__c)</formula>
    <label>Channel Type</label>
    <type>Text</type>
</CustomField>