force-app/main/default/objects/Case/fields/Child_s_Date_of_Birth_DOB__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Date_of_Birth_DOB__c</fullName>
    <description>[26-Aug-21 Khai] Extract out the DOB of the child if Call Regarding is a Child</description>
    <formula>CallRegarding__r.Birthdate</formula>
    <label>Child&apos;s Date of Birth (DOB)</label>
    <type>Date</type>
</CustomField>