force-app/main/default/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Product &amp; Medical</fullName>
            </value>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Campaign &amp; Promotion</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Loyalty &amp; Redemption</fullName>
            </value>
            <value>
                <fullName>Home Delivery</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>