force-app/main/default/objects/Case/fields/ConsumptionperMonthNoofCans__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionperMonthNoofCans__c</fullName>
    <description>Capture the consumption per month of the brand by
customer</description>
    <label>Consumption per Month (No. of Cans)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>