force-app/main/default/objects/Case/fields/ContactEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailAddress__c</fullName>
    <description>Use to reference on email template</description>
    <formula>Contact.Email</formula>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>