force-app/main/default/objects/Case/fields/ContactMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactMobileNumber__c</fullName>
    <description>Use to reference on email template</description>
    <formula>Contact.Phone</formula>
    <label>Contact Mobile Number</label>
    <type>Text</type>
</CustomField>