force-app/main/default/objects/Case/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Conversation Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>