force-app/main/default/objects/Case/fields/ConvertedBR__c.field-meta.xml
<CustomField>
    <fullName>ConvertedBR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Cases (Converted Brand Relationship)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>