force-app/main/default/objects/Case/fields/CurrentMedicalCondition__c.field-meta.xml
<CustomField>
    <fullName>CurrentMedicalCondition__c</fullName>
    <description>Capture the current medical condition of the customer</description>
    <label>Current Medical Condition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>