force-app/main/default/objects/Case/fields/CustomerCertificationAttached__c.field-meta.xml
<CustomField>
    <fullName>CustomerCertificationAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Certification Attached</label>
    <type>Checkbox</type>
</CustomField>