force-app/main/default/objects/Case/fields/DataURL__c.field-meta.xml
<CustomField>
    <fullName>DataURL__c</fullName>
    <label>DataURL</label>
    <type>Url</type>
</CustomField>