force-app/main/default/objects/Case/fields/Date_of_Birth_DOB__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_DOB__c</fullName>
    <formula>CallRegarding__r.Birthdate</formula>
    <label>Date of Birth (DOB)</label>
    <type>Date</type>
</CustomField>