force-app/main/default/objects/Case/fields/DateofPackaging__c.field-meta.xml
<CustomField>
    <fullName>DateofPackaging__c</fullName>
    <label>Date of Packaging</label>
    <type>Date</type>
</CustomField>