force-app/main/default/objects/Case/fields/DateOpenedUsed__c.field-meta.xml
<CustomField>
    <fullName>DateOpenedUsed__c</fullName>
    <label>Date Opened/Used</label>
    <type>Date</type>
</CustomField>