force-app/main/default/objects/Case/fields/DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysOpen__c</fullName>
    <formula>IF(
    IsClosed,
    DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),
    TODAY() - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day(s) Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>