force-app/main/default/objects/Case/fields/Description_List_View__c.field-meta.xml
<CustomField>
    <fullName>Description_List_View__c</fullName>
    <description>This field is only used for list view, since standard Description field cannot be displayed in list view</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>