force-app/main/default/objects/Case/fields/Direct_Selling__c.field-meta.xml
<CustomField>
    <fullName>Direct_Selling__c</fullName>
    <label>Direct Selling?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>