force-app/main/default/objects/Case/fields/Discharge_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date_c__c</fullName>
    <description>Receives value for Case.DischargeDate from DischargeDate of its Related Channel Response</description>
    <formula>If(ISPICKVAL(Status, &quot;Completed&quot;) &amp;&amp; Contact.Market__c == &apos;VN&apos;,
    RelatedChannelResponse__r.Discharge_Date__c, null
)</formula>
    <label>Discharge_Date__c</label>
    <type>Date</type>
</CustomField>