force-app/main/default/objects/Case/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>CreatedDate +  TargetCompletionTime__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>