force-app/main/default/objects/Case/fields/EndUserName__c.field-meta.xml
<CustomField>
    <fullName>EndUserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capture the end user for the product</description>
    <label>End User Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>