force-app/main/default/objects/Case/fields/EngagedWithChat__c.field-meta.xml
<CustomField>
    <fullName>EngagedWithChat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engaged With Chat</label>
    <type>Checkbox</type>
</CustomField>