force-app/main/default/objects/Case/fields/EnquirerType__c.field-meta.xml
<CustomField>
    <fullName>EnquirerType__c</fullName>
    <label>Enquirer Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aged Care Rep</fullName>
            </value>
            <value>
                <fullName>Dietician</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Hospital Pharmacist</fullName>
            </value>
            <value>
                <fullName>Hospital Rep</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Patient/Consumer</fullName>
            </value>
            <value>
                <fullName>Pharmacy Assistant</fullName>
            </value>
            <value>
                <fullName>Pharmacy Rep</fullName>
            </value>
            <value>
                <fullName>Retail Pharmacist</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
                <isActive>false</isActive>
                <label>Veterinarian</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>