force-app/main/default/objects/Case/fields/EscalationPoint2__c.field-meta.xml
<CustomField>
    <fullName>EscalationPoint2__c</fullName>
    <label>Escalation Point 2</label>
    <type>Email</type>
</CustomField>