force-app/main/default/objects/Case/fields/EscalationPoint__c.field-meta.xml
<CustomField>
    <fullName>EscalationPoint__c</fullName>
    <label>Escalation Point</label>
    <type>Email</type>
</CustomField>