force-app/main/default/objects/Case/fields/Estimated_Due_Date_EDD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Due_Date_EDD__c</fullName>
    <formula>CallRegarding__r.EstimatedDueDate__c</formula>
    <label>Estimated Due Date (EDD)</label>
    <type>Date</type>
</CustomField>