force-app/main/default/objects/Case/fields/EstimatedDueDate_Completed__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDueDate_Completed__c</fullName>
    <label>Estimated Due Date (Completed)</label>
    <type>Date</type>
</CustomField>