force-app/main/default/objects/Case/fields/Expiry_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_1__c</fullName>
    <formula>Batch_Number_1__r.Expiry_Date__c</formula>
    <label>Expiry Date 1</label>
    <type>Date</type>
</CustomField>